MY DEV ORG/src/objects/Q_A__c.object
<CustomObject>
    <description>Child object to capture and audit questions and answers regarding an investment.</description>
    <fields>
        <fullName>Answers__c</fullName>
        <label>Answers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Investment object</description>
        <label>Investment</label>
        <referenceTo>Investment__c</referenceTo>
        <relationshipLabel>Q&amp;As</relationshipLabel>
        <relationshipName>Q_As</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Q&amp;A</label>
    <nameField>
        <label>Q&amp;A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q&amp;As</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>